fixed horizontal scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 }
 
 #bodyContainer {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   max-width: 2048px;
 }
